# sdl3_gpu_model_loader

./: .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  example.c  example.frag  example.vert  main.c
include/SDL3_modelloader/: SDL_modelloader.h
sample/: CMakeLists.txt  sample.c
src/: SDL_modelloader.c  SDL_modelloader_gltf.c  SDL_modelloader_impl.h  SDL_modelloader_obj.c
